disable registrations update game seed file

--- a/app/views/games/_form.html.erb
+++ b/app/views/games/_form.html.erb
@@ -45,5 +45,5 @@
   <% end %>
   <p><%= f.link_to_add "Add a Release", :releases, class: "btn btn-success" %></p>
 
-  <%= f.submit "Create Game", class: "btn btn-success" %>
+  <%= f.submit "Save Game", class: "btn btn-success" %>
 <% end %>
